enum Status {
  todo('TODO'),
  doing('DOING'),
  done('DONE');

  const Status(this.name);

  final String name;
}
